--- a/app/views/bands/index.html.erb
+++ b/app/views/bands/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Bands</h1>
-
-<%= render @bands %>
+<% unless @bands.empty? %>
+  <ul>
+    <%= render @bands %>
+  </ul>
+<% end %>
 
 <%= link_to "Create a new band", new_band_url %>
