--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Edit <%= @album.name %></h1>
 
-<%= render "form", action: album_url, method: :patch %>
+<%= render "form", album: @album, action: album_url, method: :patch %>
