--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Create new album by <%= @album.band.name %></h1>
 
-<%= render "form", action: albums_url, method: :post %>
+<%= render "form", album: @album, action: albums_url, method: :post %>
