--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,7 +1,8 @@
 <h1><%= @track.name %></h1>
 
 <p>Track Style: <%= @track.track_style %></p>
-<p>Lyrics: <%= @track.lyrics %></p>
+<p>Lyrics:</p>
+<%= ugly_lyrics(@track.lyrics) %>
 </br>
 
 <% unless @track.notes.empty? %>
