--- a/app/views/bands/edit.html.erb
+++ b/app/views/bands/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Edit <%= @band.name %></h1>
 
-<%= render "form", method: :patch, action: band_url(@band) %>
+<%= render "form", band: @band, method: :patch, action: band_url(@band) %>
