--- a/app/views/bands/new.html.erb
+++ b/app/views/bands/new.html.erb
@@ -1,3 +1,3 @@
 <h1>Create a new band</h1>
 
-<%= render "form", method: :post, action: bands_url %>
+<%= render "form", band: @band, method: :post, action: bands_url %>
